MBR is now loading bootstrap

--- a/hal/bootstrap/Makefile
+++ b/hal/bootstrap/Makefile
@@ -1,11 +1,18 @@
+
+DRIVERS:= drivers/console.inc drivers/disk.inc
+
 .PHONY: all clean qemu
-all: mbr/mbr
+all: mbr/mbr bootstrap/bootstrap
+	@cat mbr/mbr bootstrap/bootstrap > hdd.img
 	
-mbr/mbr: mbr/mbr.S mbr/a20.inc mbr/gdt.inc drivers/console.inc
+mbr/mbr: mbr/mbr.S mbr/a20.inc $(DRIVERS)
 	@nasm -fbin -o mbr/mbr mbr/mbr.S
 
+bootstrap/bootstrap: bootstrap/bootstrap.S bootstrap/gdt.inc $(DRIVERS)
+	@nasm -fbin -o bootstrap/bootstrap bootstrap/bootstrap.S
 qemu:
-	qemu-system-x86_64 -hda mbr/mbr
+	@qemu-system-x86_64 -hda hdd.img
 
 clean:
-	@rm mbr/mbr
+	@rm mbr/mbr bootstrap/bootstrap hdd.img
+	
