changed directory tree around

--- a/hal/boot/i686-amd64/Makefile
+++ b/hal/boot/i686-amd64/Makefile
@@ -1,16 +1,15 @@
 
-DRIVERS:= drivers/console.inc drivers/disk.inc
 MBR_SRCS:= mbr/mbr.S mbr/a20.inc mbr/gdt.inc mbr/vesa.inc
 
 .PHONY: all clean qemu image
-all: bios/boot_manager/boot_manager mbr/mbr
-#	@cat mbr/mbr > hdd.img
+all: bios/boot_manager/boot_manager bios/stage2/stage2
 
 bios/boot_manager/boot_manager: bios/boot_manager/boot_manager.asm
 	@nasm -f bin -o bios/boot_manager/boot_manager bios/boot_manager/boot_manager.asm
 
-mbr/mbr: $(MBR_SRCS)
-	@nasm -fbin -o mbr/mbr mbr/mbr.S
+bios/stage2/stage2: bios/stage2/stage2.asm
+	@nasm -f bin -o bios/stage2/stage2 bios/stage2/stage2.asm
+
 
 image:
 #	# Create disk image
@@ -21,7 +20,7 @@ image:
 	@dd if=bios/boot_manager/boot_manager of=hdd.img conv=notrunc bs=1 count=432
 	@dd if=bios/boot_manager/boot_manager of=hdd.img conv=notrunc bs=1 count=2 skip=510 seek=510
 	
-	@dd if=mbr/mbr of=hdd.img conv=notrunc bs=512 count=1 seek=1050624	
+	@dd if=bios/stage2/stage2 of=hdd.img conv=notrunc bs=512 count=2 seek=1050624	
 
 #	# Copy loader and other files to the image
 #	@mcopy -i hdd.img kernel.bin ::
