creating build script

--- a/hal/boot/i686-amd64/Makefile
+++ b/hal/boot/i686-amd64/Makefile
@@ -11,16 +11,16 @@ bios/mbr: bios/mbr.asm
 	@nasm -f bin -o bios/mbr bios/mbr.asm
 
 
-image:
+#image:
 #	# Create disk image
 #	@mkdosfs -F 16 -C hdd.img 144000
 	
 
 #	# Install MBR to the image, being careful not to touch GPT partition data
-	@dd if=bios/bootmgr of=hdd.img conv=notrunc bs=1 count=432
-	@dd if=bios/bootmgr of=hdd.img conv=notrunc bs=1 count=2 skip=510 seek=510
+#	@dd if=bios/bootmgr of=hdd.img conv=notrunc bs=1 count=432
+#	@dd if=bios/bootmgr of=hdd.img conv=notrunc bs=1 count=2 skip=510 seek=510
 	
-	@dd if=bios/mbr of=hdd.img conv=notrunc bs=512 count=2 seek=1050624	
+#	@dd if=bios/mbr of=hdd.img conv=notrunc bs=512 count=2 seek=1050624	
 
 #	# Copy loader and other files to the image
 #	@mcopy -i hdd.img kernel.bin ::
@@ -30,5 +30,5 @@ qemu:
 	@qemu-system-x86_64 -hda hdd.img
 
 clean:
-	@rm -f mbr/mbr bios/boot_manager/boot_manager
+	@rm -f bios/mbr bios/bootmgr
 	
