--- a/hal/boot/i686-amd64/Makefile
+++ b/hal/boot/i686-amd64/Makefile
@@ -1,21 +1,24 @@
+TARGETS:= bios/bootmanager \
+	  bios/preloader
 
 .PHONY: all clean install
-all: bios/bootmgr bios/mbr
+all: $(TARGETS)
 
 
 
-bios/bootmgr: bios/bootmgr.asm
-	nasm -f bin -o bios/bootmgr bios/bootmgr.asm
+bios/bootmanager: bios/bootmanager.asm
+	nasm -f bin -o $@ $<
 
-bios/mbr: bios/mbr.asm
-	nasm -f bin -o bios/mbr bios/mbr.asm
+bios/preloader: bios/preloader.asm
+	nasm -f bin -o $@ $<
 
 
 install:
 	mkdir -p ../../../tmp/rootfs/boot
+	cp bios/preloader ../../../tmp/rootfs/boot/preloader
 	cp loader/loader ../../../tmp/rootfs/boot/loader
 
 
 clean:
-	rm -f bios/mbr bios/bootmgr
+	rm -f $(TARGETS)
 	
