preloader can now load /boot, but its hacked up. next commit will have proper file searching

--- a/hal/boot/i686-amd64/Makefile
+++ b/hal/boot/i686-amd64/Makefile
@@ -11,7 +11,7 @@ bios/bootmanager: bios/bootmanager.asm
 
 bios/preloader: bios/preloader.asm
 	nasm -f bin -o $@ $<
-
+	touch loader/loader
 
 install:
 	mkdir -p ../../../tmp/rootfs/boot
