uefi and bios versions of loader are now linked and bootable. functionality limited, onto cleanup

--- a/hal/boot/i686-amd64/Makefile
+++ b/hal/boot/i686-amd64/Makefile
@@ -1,6 +1,7 @@
 TARGETS:= 	bios/bootmanager \
 	  	bios/preloader \
-		loader/src/bios/start.o
+		loader/loader.efi \
+		loader/loader.bin
 
 .PHONY: all clean install
 all: $(TARGETS)
@@ -12,22 +13,28 @@ bios/bootmanager: bios/bootmanager.asm
 bios/preloader: bios/preloader.asm
 	nasm -f bin -o $@ $<
 
-## Loader entry point for BIOS systems is written in assembly
-loader/src/bios/start.o: loader/src/bios/start.asm
-	nasm -f elf32 -o $@ $<
-
 ## UEFI version of loader
-#loader/loader.efi: loader/uefi_entry.asm
-#	nasm -f win32 -o loader/uefi_entry.o $<
-#	lld-link /subsystem:efi_application /entry:START /base:0x100000 /out:$@ loader/uefi_entry.o
+loader/loader.efi: loader/uefi/start.rs
+	cargo -Z unstable-options -C loader build --target=i686-unknown-uefi
+	lld-link /subsystem:efi_application /entry:start /base:0x100000 /out:$@ loader/target/i686-unknown-uefi/debug/libuefi.a loader/target/i686-unknown-uefi/debug/libloader.a /machine:x86
+
+# BIOS version of loader
+loader/loader.bin: loader/bios/start.asm
+	mkdir -p loader/target/i686-unknown-linux-gnu
+	nasm -f elf32 -o loader/target/i686-unknown-linux-gnu/start.o loader/bios/start.asm
+	cargo -Z unstable-options -C loader build --target=i686-unknown-linux-gnu
+	ld.lld -Tloader/link.lds -o loader.elf loader/target/i686-unknown-linux-gnu/start.o loader/target/i686-unknown-linux-gnu/debug/libloader.a
+	objcopy -O binary --only-section=.text --only-section=.text.main loader.elf loader.bin
 
 install:
 #	chmod +x $(TARGETS)
 	mkdir -p ../../../tmp/rootfs/boot
 	cp bios/preloader ../../../tmp/rootfs/boot/preloader
-	cp loader/loader ../../../tmp/rootfs/boot/loader
+	cp loader.bin ../../../tmp/rootfs/boot/loader
 #	cp loader/loader.efi ../../../tmp/efi_sys/BOOT/EFI/BOOTX32.EFI
 
 
 clean:
 	rm -f $(TARGETS)
+	rm -f loader/src/bios/start.o
+	cargo -Z unstable-options -C loader clean
