removed auto generated files

--- a/hal/boot/grub-2.12/.gitignore
+++ b/hal/boot/grub-2.12/.gitignore
@@ -249,3 +249,30 @@ build-aux/test-driver
 /grub-fs-tester
 grub-core/build-grub-module-verifier
 __pycache__
+25_bli
+30_uefi-firmware
+grub-core/gdb_helper.py
+grub-core/lib/gnulib/alloca.h
+grub-core/lib/gnulib/ctype.h
+grub-core/lib/gnulib/dirent.h
+grub-core/lib/gnulib/fcntl.h
+grub-core/lib/gnulib/getopt-cdefs.h
+grub-core/lib/gnulib/getopt.h
+grub-core/lib/gnulib/inttypes.h
+grub-core/lib/gnulib/langinfo.h
+grub-core/lib/gnulib/limits.h
+grub-core/lib/gnulib/locale.h
+grub-core/lib/gnulib/malloc/dynarray-skeleton.gl.h
+grub-core/lib/gnulib/malloc/dynarray.gl.h
+grub-core/lib/gnulib/stdio.h
+grub-core/lib/gnulib/stdlib.h
+grub-core/lib/gnulib/string.h
+grub-core/lib/gnulib/strings.h
+grub-core/lib/gnulib/sys/
+grub-core/lib/gnulib/time.h
+grub-core/lib/gnulib/unistd.h
+grub-core/lib/gnulib/unitypes.h
+grub-core/lib/gnulib/uniwidth.h
+grub-core/lib/gnulib/wchar.h
+grub-core/lib/gnulib/wctype.h
+grub-shell-luks-tester
