--- a/hal/boot/grub-2.12/grub.cfg
+++ b/hal/boot/grub-2.12/grub.cfg
@@ -14,7 +14,7 @@ set default=chimera
 
 # For booting GNU/Hurd
 menuentry "Chimera" --id chimera {
-	set root=(hd0,msdos1)
+	set root=(cd)
 	multiboot /boot/gnumach.gz root=device:hd0s1
 
 #	module /hurd/ext2fs.static ext2fs --readonly \
@@ -26,8 +26,3 @@ menuentry "Chimera" --id chimera {
 #	module /lib/ld.so.1 exec /hurd/exec '$(exec-task=task-create)'
 }
 
-# Change the colors.
-menuentry "Change the colors" {
-	set menu_color_normal=light-green/brown
-	set menu_color_highlight=red/blue
-}
