--- a/hal/boot/grub-2.12/grub.cfg
+++ b/hal/boot/grub-2.12/grub.cfg
@@ -1,5 +1,5 @@
 #
-# Sample GRUB configuration file
+# Chimera GRUB configuration file
 #
 
 # Boot automatically after 30 secs.
@@ -12,17 +12,10 @@ set default=chimera
 #set fallback=gnuhurd
 
 
-# For booting GNU/Hurd
+# For booting Chimera LiveCD
 menuentry "Chimera" --id chimera {
 	set root=(cd)
-	multiboot /boot/gnumach.gz root=device:hd0s1
-
-#	module /hurd/ext2fs.static ext2fs --readonly \
-#			--multiboot-command-line='${kernel-command-line}' \
-#			--host-priv-port='${host-port}' \
-#			--device-master-port='${device-port}' \
-#			--exec-server-task='${exec-task}' -T typed '${root}' \
-#			'$(task-create)' '$(task-resume)'
-#	module /lib/ld.so.1 exec /hurd/exec '$(exec-task=task-create)'
+	multiboot2 /boot/booster
+	module /boot/chimera.gz ARCHIVE
 }
 
