cleaned up, removed module arg

--- a/hal/boot/grub-2.12/grub.cfg
+++ b/hal/boot/grub-2.12/grub.cfg
@@ -15,7 +15,7 @@ set default=chimera
 # For booting Chimera LiveCD
 menuentry "Chimera" --id chimera {
 	set root=(cd)
-	multiboot2 /boot/booster
-	module /boot/chimera.gz ARCHIVE
+	multiboot2 /boot/initializer
+	module /boot/chimera.gz
 }
 
