fixed module error message

--- a/hal/boot/grub-2.12/grub.cfg
+++ b/hal/boot/grub-2.12/grub.cfg
@@ -16,6 +16,6 @@ set default=chimera
 menuentry "Chimera" --id chimera {
 	set root=(cd)
 	multiboot2 /boot/initializer
-	module /boot/chimera.gz
+	module2 /boot/chimera.gz
 }
 
