--- a/hal/i386/initializer/Makefile
+++ b/hal/i386/initializer/Makefile
@@ -2,7 +2,7 @@
 
 all:
 	nasm -f elf32 start.asm -o start.o
-	@ld -m elf_i386 -nostdlib -Ttext=0x1000 start.o -o initializer
+	ld -m elf_i386 -nostdlib -Ttext=0x1000 start.o -o initializer
 
 install:
-	@cp initializer /home/mike/chimera/iso/boot/initializer
+	cp initializer $(CHIMERA_SRC_ROOT)/iso/boot/initializer
