into c language now. fixed all issues with grub module needing a paramater.
framebuffer mode setup

--- a/hal/boot/grub-2.12/grub.cfg
+++ b/hal/boot/grub-2.12/grub.cfg
@@ -16,6 +16,6 @@ set default=chimera
 menuentry "Chimera" --id chimera {
 	set root=(cd)
 	multiboot2 /boot/initializer
-	module2 /boot/chimera.gz NULL # Do not remove 'NULL'. GRUB has a bug where it will not pass the memory address of a module to us without a string present.
+	module2 /boot/chimera.gz
 }
 
